# NiaCpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
librarys/: CMakeLists.txt
src/: main.cpp
src/algorithms/: algorithm.h  individual.cpp  individual.h
src/algorithms/basic/: differentialevolution.cpp  differentialevolution.h
src/algorithms/modified/: selfadaptivedifferentialevolution.cpp  selfadaptivedifferentialevolution.h
src/arrays/: array.h
src/util/: task.cpp  task.h
